blogging-with-wintersmith

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <div class="articles">
           <article>
             <header>
+              <h2><a href="/articles/blogging-with-wintersmith/">Blogging with Wintersmith</a></h2><span class="posttime">Mar 30th, 2013</span>
+            </header>
+          </article>
+          <article>
+            <header>
               <h2><a href="/articles/install-redmine/">Install Redmine 2.1.0 on Ubuntu Server 12.04 64bit</a></h2><span class="posttime">Sep 23rd, 2012</span>
             </header>
           </article>
@@ -41,11 +46,6 @@
           <article>
             <header>
               <h2><a href="/articles/customer-risk/">When the customer is the biggest risk</a></h2><span class="posttime">Sep 1st, 2012</span>
-            </header>
-          </article>
-          <article>
-            <header>
-              <h2><a href="/articles/octopress/">Blogging with Octopress and Github pages</a></h2><span class="posttime">Aug 31st, 2012</span>
             </header>
           </article>
         </div>
