more post on index page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
               <h2><a href="/articles/customer-risk/">When the customer is the biggest risk</a></h2><span class="posttime">Sep 1st, 2012</span>
             </header>
           </article>
+          <article>
+            <header>
+              <h2><a href="/articles/octopress/">Blogging with Octopress and Github pages</a></h2><span class="posttime">Aug 31st, 2012</span>
+            </header>
+          </article>
         </div>
       </div>
       <aside class="sidebar">
